Rendre visible le lien

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>Allo</p>
 
-<a href="../alumettes/html/index.html">Jeu increment</a>
+<h3><a href="../alumettes/html/index.html">Jeu increment</a></h3>
 
 </body>
 </html>
