--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Allo</p>
-
+<p>Allo test test test test test tsets test test test</p>
 <h3><a href="../alumettes/html/index.html">Jeu increment</a></h3>
 
 </body>
