debut style page d'accueil win98

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>nclsvncnt.net</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script type="text/javascript" src="../javascript/script.js"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>Allo test test test test test tsets test test test</p>
-<h3><a href="../alumettes/html/index.html">Jeu increment</a></h3>
+    <h1>nclsvncnt.net</h1>
+    <div class="mainContent">
+        <div class="window">
+            <div class="windowTopBar">
+                <div><p class="windowTopBarItem" id="windowTitle">Jeu increment</p></div>
+                <div><button class="windowTopBarItem" id="windowMinimize">_</button></div>
+                <div><button class="windowTopBarItem" id="windowMaximize">#</button></div>
+                <div><button class="windowTopBarItem" id="windowClose">X</button></div>                
+            </div>
+            <div class="content">
+                <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <button class="buttonNavigation" onclick="location = '../alumettes/html/index.html'">Go!</button>
+            </div>
+        </div>
+    </div>
 
 </body>
+
 </html>
